syntax = "proto3";

package carota.dm;

import "Telemetry.proto";

option java_package = "com.carota.protobuf";

/*
* Path : /dl
* Feture :
*   1. Add and active download
*/
message DownloadReq {
    message Plan {
        string id = 1;
        string url = 2;
        string md5 = 3;
        string desc = 4;
    }
    repeated Plan plans = 1;
    string tag = 2;
}

/*
* Path : /pg
* Feture :
*   1. Get download progress
*/
message ProgressRsp {
    message Work {
        enum Status {
            IDLE = 0;
            WAIT = 1;
            RUN = 2;
            FINISH = 3;
            ERROR = 4;
        }
        string id = 1;
        int32 progress = 2;
        Status status = 3; 
        string desc = 4;
        int32 speed = 5;
    }
    repeated Work works = 1;
    repeated carota.telemetry.CallTrace trace = 2;
}

/*
* Path : /cmd
* Feture :
*   1. Get download progress
*/
message CommandReq {
    enum Action {
        STOP = 0;
        DELETE = 1;
        PREPARE = 2;
    }
    Action action = 1;
    repeated string ids = 2;
    string extra = 3;
    string tag = 4;
}

message CommandRsp {
    int64 free = 1;
    int64 require = 2;
    string extra = 3;
    repeated carota.telemetry.CallTrace trace = 4;
}
